--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-body{
-    padding: 0;
-    margin: 0;
+body {
+  margin: 0;
 }
 /* NavBar css */
 .navBar {
@@ -57,7 +56,7 @@ body{
   }
 }
 
- a {
+a {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   size: 18px;
@@ -71,51 +70,130 @@ hr {
   box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.25) inset;
 }
 
-.main{
-    position: relative;
-   height: 385px;
-   width: 1203px;
-    display: flex;
-    top: 104px;
-    left: 119px;
-    border-radius: 15px;
-    justify-content: space-between;
+.main {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: auto;
+  max-width: 1203px;
+  margin-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-.box1{
-  width: 32%;
-   background: linear-gradient(135.38deg, #3300FF 0%, #FA00FF 98.32%);
-   box-shadow: 0px 0px 4px 4px #00000040;
-   border-radius: 15px;
-   
+.boxes {
+  flex: 1;
+  border-radius: 15px;
+  margin: 5px;
 }
-.box2{
-    width: 32%;
-    box-shadow: 0px 0px 4px 4px #00000040;
-    border-radius: 15px;
+.box1 {
+  min-width: calc(33.333%-10px);
+  background: linear-gradient(135.38deg, #3300ff 0%, #fa00ff 98.32%);
+  box-shadow: 0px 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.box3{
-    width: 32%;
-    background-color: #D9D9D9;
-    border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.box2 {
+  min-width: calc(333.333%-10px);
+  border-radius: 15px;
 }
-.boxcontainer{
-    display: grid;
-    height: 80%;
-    width: 80%;
-    background-color: #D9D9D9;
-    grid-gap: 10px;
-    grid-template-columns: repeat(3,1fr);
-    
+.box3 {
+  min-width: calc(333.333%-10px);
 }
-.boxgrid{
-    padding: 10px;
-    border-radius: 15px;
-    background-color: #00407A;
+.logo {
+  max-width: 100%;
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+}
+/* container */
+.boxcontainer {
+  display: grid;
+  height: 75%;
+  width: 75%;
+  grid-gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
+}
+.boxgrid {
+  padding: 10px;
+  background-color: #00407a;
   text-align: center;
+  border-radius: 15px;
 }
-#b9{
-    background-color: #7A0000;
+#b9 {
+  background-color: #7a0000;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.grid {
+  width: 75%;
+  height: 75%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+}
+
+.boxgrid {
+  padding: 10px;
+  text-align: center;
+  background: rgba(0, 64, 122, 1);
+
+  border-radius: 15px;
+}
+#b9 {
+  background: rgba(122, 0, 0, 1);
+}
+
+/* tablet view responsiveness css */
+@media screen and (max-width: 744px) {
+  .box1 {
+    min-width: 100%;
+    height: 385px;
+  }
+  .box2,
+  .box3 {
+    min-width: calc(50% - 10px);
+  }
+  .logo {
+    display: block;
+  }
+}
+
+/* mobile view responsiveness css */
+@media screen and (max-width: 393px) {
+  .main {
+    margin-top: 8px;
+    max-width: 250px;
+    height: 775px;
+  }
+  .box1,
+  .box2,
+  .box3 {
+    min-width: 250px;
+    height: 250px;
+    transform: scaleX(-1);
+    filter: FlipH;
+    transform: scaleY(-1);
+    filter: FlipV;
+    margin-bottom: 10px;
+  }
+  .navBar {
+    min-height: 55px;
+    height: auto;
+    margin-bottom: 0;
+  }
+
+  .main {
+    display: block;
+    transform: scaleX(-1);
+    filter: FlipH;
+    transform: scaleY(-1);
+    filter: FlipV;
+  }
 }
